<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="64dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblGeoLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Gaborone, BW"
                android:textColor="@color/primary_text" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/lblYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2011"
                android:textColor="@color/icons"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Meteor 102"
                android:textColor="@color/icons"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btnBack"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:elevation="1dp"
            android:src="@drawable/ic_back_white"
            app:srcCompat="@drawable/ic_back_white" />
    </android.support.v7.widget.CardView>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rubicon.iky.com.ikyrocks.MapActivity" />

    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="8dp"
        android:background="@drawable/dash_selector_2"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_chevron_right_purple" />

    <ImageButton
        android:id="@+id/btnPrev"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btnNext"
        android:layout_marginLeft="8dp"
        android:background="@drawable/dash_selector_2"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_chevron_left_purple" />
</RelativeLayout>