<resources>
    <string name="app_name">iRock</string>

    <!-- Strings related to login -->
    <string name="Nasa_App_Token">iF6OUYNiIcNCCTQMkVY0NUXa9</string>
    <string name="Nasa_Secret_Token">HNysUDKxdxv86bSRgb_j8dyn0_OEe9KGdXaK</string>
    <string name="gps_key">AIzaSyC4dMHL0eUNgRLoTpMD3nFEkHE4uXLPs4U</string>
    <string name="title_activity_test_connector">TestConnector</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_card_auth">CardAuthActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_map">MeteorMap</string>
</resources>
