<?xml version="1.0" encoding="utf-8"?>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/list"
                    android:fadingEdge="none"
                    android:layout_marginRight="20dp"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <xyz.danoz.recyclerviewfastscroller.vertical.VerticalRecyclerViewFastScroller
                    android:id="@+id/fast_scroller"
                    android:layout_width="18dp"
                    app:rfs_handleColor="@color/primary_dark"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    />

        </RelativeLayout>

